src/np222kk/dv507/a2/test/cases/positive/test_introduction.ofp
# test_introduction

void main() {
    # I am the main method
    int x = 1;
}

void subMethod(int i) {
    # I am a submethod
    string x = "I am a submethod";
    println(x);
}