src/np222kk/dv507/a2/test/cases/negative/test_neg_print.ofp
# test_neg_print

void main() {
    print("Hello", "World");
    println("Hello", "World");
    print();
    println();
}